[package]
name = "viewer-domain"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore pure viewer domain: read-only view-model ADTs (ClaimRowView, PageView) + server-rendered HTML (render_claims_page) via maud. NO I/O (ADR-029)."

[lib]
path = "src/lib.rs"

# PURE (slice-06): the read-only viewer's view-model + HTML rendering core
# (ADR-029). Holds the view-model ADTs the `/claims` route projects from the
# read-only `StoreReadPort`, and the `render_claims_page` maud renderer. NO I/O,
# NO persistence, NO knowledge of DuckDB/HTTP/hyper/the network.
#
# Depends ONLY on the pure `maud` compile-time HTML macro + `ports` (for the
# boundary value types the view-model is projected from). `maud` is a pure
# compile-time template crate — no I/O, no async runtime — allowlisted in the
# `xtask check-arch` pure-core arm (mirrors slice-02's `serde_yaml_ng` for
# `scraper-domain`).
#
# Forbidden (enforced by `cargo xtask check-arch` pure-core allowlist):
# tokio, reqwest, duckdb, keyring, atrium-*, hyper, std::fs, std::net.
[dependencies]
maud = { workspace = true }
ports = { path = "../ports" }
# PURE → PURE (slice-08; ADR-036/037/038): the network-search view-model projects
# `appview-domain`'s per-author `NetworkSearchResult` / `NetworkResultRow` (the
# REUSED anti-merging `compose_results` output) into the `#search-results`
# fragment. `appview-domain` is itself a pure core (no I/O, allowlisted pure-→pure
# edge in `xtask check-arch`), so this keeps `viewer-domain` pure: no second
# grouping/verification path lives here.
appview-domain = { path = "../appview-domain" }
# PURE → PURE (slice-09; ADR-039/040/041): the contributor-score view-model
# projects the REUSED slice-04 `scoring` core's `WeightedView` (the ranked
# `WeightedPairing`s + their per-claim `Contribution` decomposition) into the
# `#score-results` fragment. `scoring` is itself a pure closed-form weight core
# (no I/O, allowlisted pure-→pure edge in `xtask check-arch` — mirrors the
# `viewer-domain → appview-domain` edge), so this keeps `viewer-domain` pure: the
# scoring math is REUSED, never reimplemented here.
scoring = { path = "../scoring" }
# PURE → PURE (slice-10; ADR-042/043/044/045): the graph-traversal view-model
# REUSES `claim-domain`'s display-only `confidence_bucket` (WD-10 thresholds, the
# ONE source of truth for the per-claim confidence bucket label rendered on every
# traversal edge — the viewer recomputes NO bucket/threshold). `claim-domain` is
# the pure claim core (no I/O, the root of the pure-core allowlist), so this keeps
# `viewer-domain` pure: the bucketing is REUSED, never reimplemented here. Promoted
# from a dev-dependency (was `/score` test-only) to a regular dep for production use.
claim-domain = { path = "../claim-domain" }

[dev-dependencies]
proptest = { workspace = true }
# TEST-ONLY: the `/score` + `/project` render unit/property tests build an
# `AttributedClaim` / `SurveyRow` feed and run the REUSED pure cores to obtain real
# view-models (not hand-rolled ones) before rendering them — so they need `chrono`
# for the claim `composed_at`. (`claim-domain`'s `Cid`/`Did` value types are now a
# regular dep above.) Dev-dependency only.
chrono = { workspace = true }
